<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextAppId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/test_app_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/test_user_id"
        app:layout_constraintEnd_toEndOf="@+id/editTextAppId"
        app:layout_constraintStart_toStartOf="@+id/editTextAppId"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppId" />

    <EditText
        android:id="@+id/editTextSecurityToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/security_token"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:text="@string/test_security_token"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserId"
        app:layout_constraintStart_toStartOf="@+id/editTextUserId"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserId" />

    <Button
        android:id="@+id/buttonShowOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/show_offers"
        app:layout_constraintEnd_toEndOf="@+id/editTextSecurityToken"
        app:layout_constraintStart_toStartOf="@+id/editTextSecurityToken"
        app:layout_constraintTop_toBottomOf="@+id/editTextSecurityToken" />

    <ProgressBar
        android:id="@+id/progressBarShowOffers"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/buttonShowOffers"
        app:layout_constraintStart_toStartOf="@+id/buttonShowOffers"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowOffers" />
</androidx.constraintlayout.widget.ConstraintLayout>